# QLandkarteGT

./: BCPP_HOWTO  CMakeLists.txt  CPackConfig.cmake  ConfigureChecks.cmake  Doxyfile  INSTALL  LICENSE  changelog.txt  config.h.cmake  qlandkartegt.1  qlandkartegt.desktop  qlandkartegt.menu  srtmconvert.py
MacOSX/: Info.plist.in  pimp-info.plist.py
Win32/: README  libjpeg.lib
cmake/Modules/: DefineInstallationPaths.cmake  FindDMTX.cmake  FindEXIF.cmake  FindGDAL.cmake  FindJPEG.cmake  FindPROJ.cmake  FindXercesC.cmake
example/: Top10Bayern.qmap
include/garmin/: IDevice.h
nsi/: 3rdparty.txt  GTinstaller.nsi  copyfiles.bat
src/: CActions.cpp  CActions.h  CAppOpts.h  CApplication.cpp  CApplication.h  CCanvas.cpp  CCanvas.h  CCanvasUndoCommandZoom.cpp  CCanvasUndoCommandZoom.h  CCopyright.cpp  CCopyright.h  CCreateMapFineTune.cpp  CCreateMapFineTune.h  CCreateMapGeoTiff.cpp  CCreateMapGeoTiff.h  CCreateMapGridTool.cpp  CCreateMapGridTool.h  CCreateMapOSM.cpp  CCreateMapOSM.h  CCreateMapQMAP.cpp  CCreateMapQMAP.h  CCreateMapWMS.cpp  CCreateMapWMS.h  CDBus.cpp  CDBus.h  CDeviceGPSD.cpp  CDeviceGPSD.h  CDeviceGarmin.cpp  CDeviceGarmin.h  CDeviceGarminBulk.cpp  CDeviceGarminBulk.h  CDeviceMagellan.cpp  CDeviceMagellan.h  CDeviceMikrokopter.cpp  CDeviceMikrokopter.h  CDeviceNMEA.cpp  CDeviceNMEA.h  CDeviceQLandkarteM.cpp  CDeviceQLandkarteM.h  CDeviceTBDOE.cpp  (+452 more)
src/locale/: qlandkartegt_cs.ts  qlandkartegt_de.ts  qlandkartegt_de_DE.ts  qlandkartegt_en.ts  qlandkartegt_es_ES.ts  qlandkartegt_fr.ts  qlandkartegt_fr_FR.ts  qlandkartegt_it_IT.ts  qlandkartegt_nl.ts  qlandkartegt_nl_NL.ts  qlandkartegt_ru.ts  qlandkartegt_ru_RU.ts
src/skybox/: sky.xcf
src/typ/: majorhighway.xpm
trunk/: bcpp.config
trunk/example/: Top10Bayern.qmap
trunk/src/: CCanvas.cpp  CCopyright.h  CCreateMapGeoTiff.cpp  CCreateMapOSM.cpp  CCreateMapQMAP.cpp  CCreateMapQMAP.h  CDlgConfig.h  CDlgEditMapLevel.cpp  CDlgEditWpt.cpp  CDlgEditWpt.h  CGpx.cpp  CGpx.h  CMainWindow.h  CMakeLists.txt  CMapDB.h  CMapDEM.cpp  CMapLevel.h  CMapNoMap.h  CMapQMAP.cpp  CMapRaster.cpp  CMegaMenu.cpp  CMouseAddWpt.cpp  CMouseEditWpt.cpp  CMouseEditWpt.h  CMouseMoveMap.h  CMouseMoveWpt.cpp  CMouseMoveWpt.h  CMouseRefPoint.cpp  CMouseRefPoint.h  CQlb.cpp  CResources.cpp  CStatusCanvas.cpp  CTrack.cpp  CTrackDB.cpp  CTrackDB.h  CTrackToolWidget.cpp  CTrackToolWidget.h  CWpt.cpp  CWptToolWidget.cpp  CWptToolWidget.h  (+17 more)
